Add Rythm.js + start/stop/reset music + move up/down with arrows

--- a/404.html
+++ b/404.html
@@ -31,11 +31,13 @@
 
   <div class="game">
     <div id="character"></div>
-    <div id="block"></div>
+    <div class="shake2" id="block"></div>
   </div>
   <p>Score: <span id="scoreSpan"></span></p>
-
-
+  
+  
+  <!-- <script src="https://unpkg.com/rythm.js/"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/rythm.js/2.2.5/rythm.min.js"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
