style de base + game logique js

--- a/404.html
+++ b/404.html
@@ -39,7 +39,9 @@
         
       </div>
 
-      <div id="game-block" class="game-obstacle game-block-1"></div>
+      <div class="game-obstacles">
+        <div id="game-obstacle" class="game-obstacle game-block-1"></div>
+      </div>
       
       <p class="main-404__wrap-game-score">Score: <span id="game-score">0</span></p>
 
