--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
   <h1>404</h1>
   <p>Page not found</p>
 
-  <div class="game">
+  <div class="game" id="game">
     <div id="character"></div>
     <div class="shake2" id="block"></div>
   </div>
