--- a/exercice.html
+++ b/exercice.html
@@ -1,65 +1,9 @@
-<!doctype html>
-<html class="no-js" lang="fr" onclick="jump()">
-
-<head>
-  <meta charset="utf-8">
-  <title>Hackathon 2021 - 404 error</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/page-404.css">
-
-  <meta name="theme-color" content="#fafafa">
-  <style>
-      #container {
-        height: 68px;
-        overflow: hidden;
-        position:relative;
-        width: 66px;
-      }
-
-      #container img {
-        position: absolute;
-        top:-7px;
-        width: 700px;
-      }
-  </style>
-</head>
-
-<body>
-
-  <!-- Add your site or application content here -->
-  <h1>404</h1>
-  <p>Page not found</p>
-
-  <div class="game">
-    <!-- <div id="character"></div> -->
-    <div>
-      <div id="container" class="masque" >
-        <img id="contenu" class="sprite" src="sprite.png" alt="sprite"/>
-      </div>
-    </div>
-    <div id="block"></div>
-  </div>
-  <p>Score: <span id="scoreSpan"></span></p>
-
-
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/script-404.js"></script>
-  <script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>sprite</title>
+    <script>
       let leftSprite = 0;
       const marche = 2;
       let conteneur;
@@ -123,8 +67,28 @@
 
 
     };
-  </script>
+    </script>
+    <style>
+      #container {
+        height: 68px;
+        overflow: hidden;
+        position: absolute;
+        width: 66px;
+      }
 
-</body>
-
+      #container img {
+        position: absolute;
+        top:-7px;
+        width: 700px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Page 404</h1>
+    <div>
+      <div id="container" class="masque" >
+        <img id="contenu" class="sprite" src="sprite.png" alt="sprite"/>
+      </div>
+    </div>
+  </body>
 </html>
