Add small stuff

--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="game-obstacles">
-        <div id="game-obstacle" class="shake2 game-obstacle game-block-1"></div>
+        <div id="game-obstacle" class="twist2 color2 game-obstacle game-block-1"></div>
       </div>
       
       <p class="main-404__wrap-game-score">Score: <span id="game-score">0</span></p>
