--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
 
   <section class="main-404">
     
-    <div class="main-404__game">
+    <div class="main-404__game" id="borderGame">
   
       <div class="main-404__game-wrap-character">
 
@@ -57,7 +57,7 @@
         <div id="game-obstacle" class="twist2 color2 game-obstacle game-block-1"></div>
         <div id="container" class="masque" >
           <img id="contenu" class="sprite" src="sprite.png" alt="sprite"/>
-        </div>
+        </div>  
       </div>
       
       <p class="main-404__wrap-game-score">Score: <span id="game-score">0</span></p>
