characters and obstacles

--- a/404.html
+++ b/404.html
@@ -46,12 +46,88 @@
 
       <div class="game-obstacles">
 
-        <div id="game-obstacle" class="game-obstacle game-block-1"></div>
-        <div id="game-obstacle" class="game-obstacle game-block-2"></div>
+        <!-- Level 1 -->
+        <div id="game-obstacle" class="game-obstacle game-block-1 color2"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-2 color3"></div>
 
-        <div id="game-obstacle" class="game-obstacle game-block-3">
-          <img src="img/champi.gif" alt="champi">
+        <!-- Level 2 -->
+        <div id="game-obstacle" class="game-obstacle game-block-3 color2"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-4 color3"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-5 color2"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-6 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-7 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-8 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-9 color2"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-10 color3"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-11 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-12 color1"></div>
+
+        <!-- Level 3 -->
+        <div id="game-obstacle" class="game-obstacle game-block-13">
+          <img src="img/grenouille2.gif" alt="">
         </div>
+        <div id="game-obstacle" class="game-obstacle game-block-14 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-15 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-16 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-17">
+          <img src="img/champi.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-18">
+          <img src="img/grenouille.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-19 color3"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-20 color3"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-21 color3"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-22">
+          <img src="img/grenouille3.gif" alt="">
+        </div>
+
+        <!-- Level 4 -->
+        <div id="game-obstacle" class="game-obstacle game-block-23">
+          <img src="img/torche.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-24 color2"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-25">
+          <img src="img/champi.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-26 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-27 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-28 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-29">
+          <img src="img/torche.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-30">
+          <img src="img/chauve-souris.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-31 color3"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-32 color3"></div>
+
+        <!-- Level 5 -->
+        <div id="game-obstacle" class="game-obstacle game-block-33 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-34 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-35 color1"></div>
+        <div id="game-obstacle" class="game-obstacle game-block-36">
+          <img src="img/grenouille.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-37">
+          <img src="img/champi.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-38">
+          <img src="img/torche.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-39">
+          <img src="img/chauve-souris.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-40">
+          <img src="img/flamme.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-41">
+          <img src="img/mamie_epee.gif" alt="">
+        </div>
+        <div id="game-obstacle" class="game-obstacle game-block-42">
+          <img src="img/ennemi1.gif" alt="">
+        </div>
+
       </div>
       
       <p class="main-404__wrap-game-score">Score: <span id="game-score">0</span></p>
