--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@
           <img src="img/perso_2.gif" alt="perso 2" id="character-2" class="main-404__game-character-2">
           <img src="img/perso_3.gif" alt="perso 3" id="character-3" class="main-404__game-character-3">
           <img src="img/perso_4.gif" alt="perso 4" id="character-4" class="main-404__game-character-4">
-          <img src="img/explotion.gif" alt="explosion" id="explosion" class="main-404__game-explosion">
+          <img src="img/explosion.gif" alt="explosion" id="explosion" class="main-404__game-explosion">
         </div>
 
         <p class="main-404__subtitle">Page not found</p>
