--- a/404.html
+++ b/404.html
@@ -152,7 +152,13 @@
 
       </div>
       
-      <p class="main-404__wrap-game-score">Score: <span id="game-score">0</span></p>
+      <p class="main-404__wrap-game-score">
+        <span>Score</span>
+        <span class="score-wrap-number">
+          <span id="game-score">0</span>
+          <img src="img/piece.gif" alt="">
+        </span>
+      </p>
 
     </div>
 
