fix bugs + restart + anim success

--- a/404.html
+++ b/404.html
@@ -72,6 +72,19 @@
 
       </div>
 
+      <div id="gameSuccess" class="main-404__game-success hide">
+
+        <h2 class="main-404__title-success">Congratulations !</h2>
+        <div id="scoreGameSuccess">
+          <p class="game-success__wrap-score">
+            <span id="game-score-success">0</span>
+            <img class="game-success__piece" src="img/piece.gif" alt="">
+          </p>
+          <span>earned</span>
+        </div>
+
+      </div>
+
       <div class="game-obstacles">
 
         <!-- Level 1 -->
