fix bug and add music animation

--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
 
 <body>
 
-  <section class="main-404">
+  <section id="section-main-404" class="main-404">
     
     <div class="main-404__game" id="borderGame">
   
@@ -74,7 +74,7 @@
 
       <div id="gameSuccess" class="main-404__game-success hide">
 
-        <h2 class="main-404__title-success">Congratulations !</h2>
+        <h2 class="main-404__title-success fontColor2">Congratulations !</h2>
         <div id="scoreGameSuccess">
           <p class="game-success__wrap-score">
             <span id="game-score-success">0</span>
