style index for prez

--- a/404.html
+++ b/404.html
@@ -186,7 +186,7 @@
     </div>
 
     <div class="main-404__actions">
-      <button id="game-start" class="main-404__btn-start-game">Play a game</button>
+      <button id="game-start" class="main-404__btn-start-game">Play</button>
       <p class="main-404__actions-or">or</p>
       <a href="/" class="main-404__btn-back-to-home">Back to Home</a>
     </div>
