--- a/index.html
+++ b/index.html
@@ -24,8 +24,36 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <section class="main-prez">
+
+    <h1 class="main-prez__title">Hackathon 2021</h1>
+
+    <div class="main-prez__theme">
+      <p class="main-prez__theme-suptitle">THÈME</p>
+      <p class="main-prez__theme-title">Représentation visuelle du son<br/>Représentation sonore du visuel.</p>
+    </div>
+
+    <div class="main-prez__team">
+      <p class="main-prez__team-suptitle">ÉQUIPE</p>
+      <p class="main-prez__team-title">Takwa <span class="main-prez__team-job">Développeur Back</span></p>
+      <p class="main-prez__team-title">Vincent <span class="main-prez__team-job">Développeur Front</span></p>
+      <p class="main-prez__team-title">Gautier <span class="main-prez__team-job">Développeur Front</span></p>
+    </div>
+
+    <div class="main-prez__demo">
+      <p class="main-prez__demo-suptitle">DÉMO</p>
+      <p class="main-prez__demo-title"><a href="https://ggxm-ecv.github.io/Hackathon_2021/404.html">https://ggxm-ecv.github.io/Hackathon_2021/404.html</a></p>
+    </div>
+
+
+
+  </section>
+  
+
+
+
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
