add good link demo + color

--- a/404.html
+++ b/404.html
@@ -188,7 +188,7 @@
     <div class="main-404__actions">
       <button id="game-start" class="main-404__btn-start-game">Play</button>
       <p class="main-404__actions-or">or</p>
-      <a href="/" class="main-404__btn-back-to-home">Back to Home</a>
+      <a href="https://ggxm-ecv.github.io/Hackathon_2021/index.html" class="main-404__btn-back-to-home">Back to Home</a>
     </div>
 
     <audio id="jumpSound">
