--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="main-prez__theme">
       <p class="main-prez__theme-suptitle">THÈME</p>
-      <p class="main-prez__theme-title">Représentation visuelle du son<br/>Représentation sonore du visuel.</p>
+      <p class="main-prez__theme-title">Représentation <span class="txt-color-blue">visuelle</span> du son<br/>Représentation <span class="txt-color-blue">sonore</span> du visuel.</p>
     </div>
 
     <div class="main-prez__team">
